--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div id="root" style="height: 100vh"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="/src/ui/main.tsx"></script>
 </body>
 
 </html>
